deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliente-service
  namespace: banco-x
spec:
  selector:
    app: cliente-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
